# hue-and-cry

./: .gitignore  README.md  main.py  pyproject.toml
HueAndCry/: CMakeLists.txt
HueAndCry/src/: CMakeLists.txt  main.cpp
src/: discover.py  randr.py  threaded.py
